# positioning-using-satellite-information

./: .gitignore  AGENTS.md  GEMINI.md  HUMAN_NEXT_STEPS.md  claude-citique.txt  claude-plan.txt  codex-citique.txt  codex-plan.txt  final-grand-plan.md  pyproject.toml  root_developer_guide.md
.Vertical/: project.json
.Vertical/chats/: 3c049ba5-24ba-4518-944a-14a0cb6a2129.json  97561c68-8811-4d70-b78e-0899eab6b747.json  c2cc9a22-b8ef-40f7-bf26-578dcddcb690.json  c7337a61-d5a3-4e3d-aeb4-79c5f764e2c0.json
artifacts/: artifacts_developer_guide.md
configs/: configs_developer_guide.md
data/: data_developer_guide.md
experiments/: change-log.md  experiment-log.csv  experiments_developer_guide.md
research/: Gemini-deep-research.txt  existing-methods.md  satellite_drone_localization_research.md
scripts/: compare_sequence_search.py  crop_replay.py  geometry_replay.py  live_receiver_stub.py  replay_packets.py  replay_pipeline.py  run_pytest_isolation.bat  run_smoke.py  scripts_developer_guide.md  sequence_search_replay.py  verify-repo.bat  verify_repo.py
src/: src_developer_guide.md
tests/: test_cli.py  test_crop.py  test_geometry.py  test_live_receiver.py  test_localization_gui_pipeline_runner.py  test_localization_gui_single_image.py  test_map_georeference.py  test_matcher_classical.py  test_matcher_image_baseline.py  test_matcher_loftr.py  test_matcher_placeholder.py  test_matcher_roma.py  test_packet_replay.py  test_replay_pipeline.py  test_sequence_comparison.py  test_sequence_search.py  test_smoke_pipeline.py  tests_developer_guide.md
(+72 files in other folders)
