[build-system]
requires = ["setuptools>=80", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "satellite-drone-localization"
version = "0.1.0"
description = "Research scaffold for bounded local alignment between drone imagery and overhead reference imagery."
readme = "final-grand-plan.md"
requires-python = ">=3.14,<3.15"
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
cache_dir = "artifacts/pytest-cache"
